--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "intervention/image": "^2.2",
         "laracasts/validation": "~1.0",
 		"intervention/imagecache": "^2.3",
-		"jildertmiedema/laravel-plupload": "^0.3.0"
+		"jildertmiedema/laravel-plupload": "^0.3.0",
+		"unisharp/laravel-ckeditor": "^4.5"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
